# Multi_Rag_System

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  TODO.md  app.py  check_setup.py  chunking.py  docker-compose.yml  eval_examples.json  evaluate_examples.py  generation.py  helper.py  ingestion.py  main.py  pyproject.toml  requirements.txt  retrieval.py  run_windows.bat
scripts/: build_embeddings.py  record_demo.py
tests/: test_generation.py  test_retrieval.py
web/: README.md  next.config.mjs  package-lock.json  package.json
web/app/: chat.tsx  globals.css  layout.tsx  page.tsx
web/app/api/chat/: route.ts
web/app/api/upload/: route.ts
web/data/: embeddings.json
web/lib/: chunk.ts  rag.ts
