[project]
name = "localrag"
version = "0.1.0"
description = "Fullstack Multimodal Local RAG with Ollama and Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.52.0",
    "gradio>=6.0.2",
    "opensearch-py>=3.1.0",
    "python-dotenv>=1.2.1",
    "unstructured[pdf]>=0.18.20",
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.4",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "rich>=13.9.0",
]

[project.scripts]
localrag-check = "check_setup:main"
localrag-evaluate = "evaluate_examples:main"
